<resources>
    <string name="app_name">Time Tracker</string>
    <string name="loading">Loading...</string>
    <string name="action_settings">Settings</string>
    <string name="running_item_channel_name">AppTime</string>
    <string name="running_item_channel_description">Currently running item</string>
    <string name="action_export_to_json">Export to JSON</string>
    <string name="action_import_from_json">Import from JSON</string>
    <string name="timeToday">Today</string>
    <string name="timeTotal">Total</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="end">End</string>
    <string name="options">Options</string>
    <string name="create">Create</string>
    <string name="ok">OK</string>
    <string name="counting">Counting</string>
    <string name="running">running</string>
    <string name="started_at">started at</string>
    <string name="duration">Duration</string>
    <string name="new_entry">New Entry</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_itemOptions">Item Options Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="minus10">-10</string>
    <string name="plus10">+10</string>
    <string name="search_hint">Item name</string>
    <string name="search_title">Search</string>
    <string name="new_group">New Group</string>
    <string name="remove">Remove</string>
    <string name="item_removed">Item removed</string>
    <string name="time_entry_removed">Time entry removed</string>
    <string name="agenda">Agenda</string>
    <string name="author">Authored by Anton Stütz</string>
    <string name="license">Licensed under GPLv3</string>
    <string name="contributions">Contributions are welcome under:</string>
    <string name="fileABug">File a bug report under: </string>
    <string name="githubUrl">https://github.com/anstue/timeTracker</string>
    <string name="issueTracker">https://github.com/anstue/timeTracker/issues</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_about">About</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_time_entry">TimeEntryActivity</string>
    <string name="notification_channel_item_name_info">Running item</string>
    <string name="notification_channel_item_description_info">Shows the running item</string>
    <string name="notification_channel_processing_name_info">Processing tasks</string>
    <string name="notification_channel_processing_description_info">Shows background processing tasks</string>
    <string name="title_activity_agenda">AgendaActivity</string>
</resources>
