<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ti_zero.com.apptime.MainTimeActivity">
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/btnMenuMainNewGroup"
        android:title="@string/new_group"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_agenda"
        android:title="@string/agenda"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exportToJson"
        android:orderInCategory="100"
        android:title="@string/action_export_to_json"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_importFromJson"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/action_import_from_json"
        app:showAsAction="never" />
</menu>
