<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/author"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/author"/>

    <TextView
        android:id="@+id/contributions"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_height="wrap_content"
        android:text="@string/contributions"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/license"/>

    <TextView
        android:id="@+id/githubUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/githubUrl"
        android:autoLink="web"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/contributions"/>

    <TextView
        android:id="@+id/bug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/fileABug"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/githubUrl"/>

    <TextView
        android:id="@+id/issueTrackerUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issueTracker"
        android:autoLink="web"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bug"/>

</RelativeLayout>