<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/notification_margin"
            android:layout_marginTop="@dimen/notification_margin"
            android:text="@string/app_name"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notification_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtCounting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:text="@string/counting" />

        <TextView
            android:id="@+id/txtNotificationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/btnNotificationToggle"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

    </LinearLayout>
</LinearLayout>
